--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">TareaVersionesIMGT</string>
     <string name="action_settings">Settings</string>
     <string name="hola_mundo">¡Hola Mundo!</string>
+    <string name="hola">HOLA</string>
 </resources>
