--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="hola_mundo">¡Hola Mundo!</string>
     <string name="hola">HOLA</string>
+    <string name="saludo">SALUDO</string>
 </resources>
