--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hola_mundo">¡Hola Mundo!</string>
     <string name="hola">HOLA</string>
     <string name="saludo">SALUDO</string>
+    <string name="prueba1">PRUEBA1</string>
 </resources>
